[metadata]
name = kan
version = 0.3
author = Li Mingyang
author_email = lmywork.overwrite898@silomails.com
description = Monitor your job submitted into Beijixing cluster
long_description = file: README.md
license = MIT
classifiers = 
	Programming Language :: Python :: 3
	Intended Audience :: Developers
	Intended Audience :: Science/Research
	Topic :: Software Development :: Build Tools
	License :: OSI Approved :: MIT License

[bdist_wheel]
build_number = 1

[options]
packages = 
	kan
include_package_data = True
zip_safe = False
install_requires = 
	click>=8.1.6
	toml>=0.10.2
	absl-py

[options.entry_points]
console_scripts = 
	kan = kan.__main__:main

[options.package_data]
kan = 
	config/*.toml
	settings.toml
